bug: grid column not aligning

--- a/app/index.scss
+++ b/app/index.scss
@@ -1,31 +1,31 @@
-body {
-  box-sizing: border-box
-}
+// body {
+//   box-sizing: border-box
+// }
 
-.center{
-  text-align: center;
-  flex-grow: center
-}
-.whoami{
-  justify-content: flex-end
-}
+// .center{
+//   text-align: center;
+//   flex-grow: center
+// }
+// .whoami{
+//   justify-content: flex-end
+// }
 
-.landing{
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  display: flex;
-}
+// .landing{
+//   position: fixed;
+//   width: 100%;
+//   height: 100%;
+//   display: flex;
+// }
 
-.background-overlay {
-  z-index: -2;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  width: 100vw;
-  // height: auto;
-  overflow: hidden;
-  position: absolute;
-  background-image: url('/assets/catan1.jpg');
-}
+// .background-overlay {
+//   z-index: -2;
+//   left: 0;
+//   right: 0;
+//   top: 0;
+//   bottom: 0;
+//   width: 100vw;
+//   // height: auto;
+//   overflow: hidden;
+//   position: absolute;
+//   background-image: url('/assets/catan1.jpg');
+// }
